<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout của editor - Thêm hoặc sửa dữ liệu các thiết bị -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Mục Tổng quan -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Nhãn -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Trường nhập dữ liệu -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Trường nhập Tên thiết bị -->
            <EditText
                android:id="@+id/edit_mobile_name"
                android:hint="@string/hint_mobile_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Trường nhập Hãng sản xuất -->
            <EditText
                android:id="@+id/edit_mobile_brand"
                android:hint="@string/hint_brand"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Mục Hệ điều hành -->
    <LinearLayout
        android:id="@+id/container_os"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Nhãn -->
        <TextView
            android:text="@string/category_os"
            style="@style/CategoryStyle" />

        <!-- Trường nhập dữ liệu -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Spinner cho các lựa chọn xổ xuống -->
            <Spinner
                android:id="@+id/spinner_os"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Mục Trạng thái -->
    <LinearLayout
        android:id="@+id/container_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Nhãn -->
        <TextView
            android:text="@string/category_status"
            style="@style/CategoryStyle" />

        <!-- Trường nhập dữ liệu -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Nhập tình trạng thiết bị -->
            <EditText
                android:id="@+id/edit_mobile_status"
                android:hint="@string/hint_status"
                android:inputType="text"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
